--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "@simondmc/popup-js": "^1.4.2",
     "@tailwindcss/typography": "^0.5.10",
     "@zip.js/zip.js": "^2.7.31",
+    "bun-types": "^1.0.14",
     "daisyui": "^4.4.17",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "web": "^0.0.2"
   },
   "scripts": {
     "css": "bunx tailwindcss -i ./src.css -o ./assets/css/tailwind.css -w",
