--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@zip.js/zip.js": "^2.7.31",
     "bun-types": "^1.0.14",
+    "css": "^3.0.0",
     "daisyui": "^4.4.17",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.5",
@@ -12,10 +13,14 @@
   "scripts": {
     "css": "bunx tailwindcss -i ./src.css -o ./assets/css/tailwind.css -w",
     "bundleBase": "bun build ./assets/js/src/**/index.tsx --outdir ./assets/js/dist",
-    "bundle": "bun bundleBase --minify",
-    "bundleDev": "bun bundleBase --watch --sourcemap=inline"
+    "bundleOpenHtmlBase": "bun build  ./open_html/v1/assets/js/src/index.ts --outdir ./assets/js/dist/open_html/v1",
+    "bundle": "bun bundleBase --minify && bun bundleOpenHtmlBase --minify",
+    "bundleDev": "bun bundleBase --watch --sourcemap=inline",
+    "bundleOpenHtmlDev": "bun bundleOpenHtmlBase --watch --sourcemap=inline"
   },
   "devDependencies": {
-    "@types/react-dom": "^18.2.17"
+    "@types/css": "^0.0.37",
+    "@types/react-dom": "^18.2.17",
+    "@types/web": "^0.0.126"
   }
 }
