--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -12,7 +12,10 @@ jobs:
             - uses: oven-sh/setup-bun@v1
               with:
                   bun-version: latest
-            - name: Run bun
+
+            - name: Install dependencies
+              run: bun install
+            - name: Build assets
               run: bun bundle
 
             - name: Deploy to github pages
