--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "dependencies": {
-    "@simondmc/popup-js": "^1.4.2",
-    "@tailwindcss/typography": "^0.5.10",
-    "@zip.js/zip.js": "^2.7.31",
-    "bun-types": "^1.0.14",
-    "css": "^3.0.0",
-    "daisyui": "^4.4.17",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.5",
-    "web": "^0.0.2"
-  },
-  "scripts": {
-    "css": "bunx tailwindcss -i ./src.css -o ./assets/css/tailwind.css -w",
-    "bundleBase": "bun build ./assets/js/src/**/index.tsx --outdir ./assets/js/dist",
-    "bundleOpenHtmlBase": "bun build  ./open_html/v1/assets/js/src/index.ts --outdir ./assets/js/dist/open_html/v1",
-    "bundle": "bun bundleBase --minify && bun bundleOpenHtmlBase --minify",
-    "bundleDev": "bun bundleBase --watch --sourcemap=inline",
-    "bundleOpenHtmlDev": "bun bundleOpenHtmlBase --watch --sourcemap=inline"
-  },
-  "devDependencies": {
-    "@types/css": "^0.0.37",
-    "@types/react-dom": "^18.2.17",
-    "@types/web": "^0.0.126"
-  }
+    "dependencies": {
+        "@simondmc/popup-js": "^1.4.2",
+        "@tailwindcss/typography": "^0.5.10",
+        "@zip.js/zip.js": "^2.7.31",
+        "bun-types": "^1.0.14",
+        "css": "^3.0.0",
+        "daisyui": "^4.4.17",
+        "react-dom": "^18.2.0",
+        "tailwindcss": "^3.3.5",
+        "web": "^0.0.2"
+    },
+    "scripts": {
+        "css": "bunx tailwindcss -i ./src.css -o ./assets/css/tailwind.css -w",
+        "bundleBase": "bun build ./assets/js/src/**/index.tsx --outdir ./assets/js/dist",
+        "bundleOpenHtmlBase": "bun build  ./open_html/v1/assets/js/src/index.ts ./open_html/v1/assets/js/src/page_loaded/*.ts --outdir ./assets/js/dist/open_html/v1",
+        "bundle": "bun bundleBase --minify && bun bundleOpenHtmlBase --minify",
+        "bundleDev": "bun bundleBase --watch --sourcemap=inline",
+        "bundleOpenHtmlDev": "bun bundleOpenHtmlBase --watch --sourcemap=inline"
+    },
+    "devDependencies": {
+        "@types/css": "^0.0.37",
+        "@types/react-dom": "^18.2.17",
+        "@types/web": "^0.0.126"
+    }
 }
